samples/_failures_safe/1761628871_921874_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_627be399.c: In function ‘next_token’:
./samples/SAFE/__tmp_627be399.c:145:9: error: expected identifier at end of input
  145 |         token->
      |         ^~~~~
./samples/SAFE/__tmp_627be399.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_627be399.c:145:9: error: expected declaration or statement at end of input
